--- a/examples/chap1.org
+++ b/examples/chap1.org
@@ -2,6 +2,11 @@
 
 * babel prelude
 
+  Since, at the time of writing, all ob-<lang>.el implementations are 
+  kind of broken/inconsitend in their treatment of the various options,
+  here are 2 more broken implementations. 
+
+  But at least they work for the subset of options used in this file.
 
 #+begin_src emacs-lisp
   (defun org-babel-execute:swi-prolog (body params)
@@ -11,19 +16,34 @@
            (script-file (if (string-equal tangle "no" )
                             (org-babel-temp-file "prolog-tmp-" ) 
                           tangle )))
-  
-    
-           (with-temp-file script-file (insert body))
-           (shell-command-to-string
-             (message (format "swipl -g 'go.' -t halt -s %s" 
-                     (org-babel-process-file-name script-file))))
-  
-           )
+      
+      
+      (with-temp-file script-file (insert body))
+      (shell-command-to-string
+       (message (format "swipl -g 'go.' -t halt -s %s" 
+                        (org-babel-process-file-name script-file))))
+      
+      )
     )
+  
+  (defun org-babel-execute:scheme (body params)
+    (let* ((tangle (cdr (assoc :tangle params)))
+           (script-file 
+            (if (string-equal tangle "no")
+                (org-babel-temp-file "org-babel-" ".rkt")
+              tangle)))
+      (with-temp-file script-file
+        (insert body))
+      (let* ((pn (org-babel-process-file-name script-file))
+             (cmd (format "\"$(which racket)\" -u %s" pn)))
+        (message cmd)
+        (shell-command-to-string cmd)
+        )))
+  
 #+end_src
 
 #+RESULTS:
-: org-babel-execute:swi-prolog
+: org-babel-execute:scheme
 
 
 ## 
@@ -59,7 +79,7 @@ go :- findall( (A,B) , pair(A,B) , L ) , print(L).
 *** racket 
    die racket version ebenso 
 
-#+begin_src scheme :tangle src_out/chap1_pairs.rkt :noweb yes 
+#+begin_src scheme :tangle src_out/chap1_pairs.rkt :noweb yes :result-type raw
   #lang racket
   (require (file "../../proll1/src_out/proll1.rkt"))
   
@@ -244,14 +264,6 @@ das reicht erstmal an metaing the meta
 
 
 
-**
-
-
-
-
-
-
-
 ** directed acyclic graph 
 
 *** prolog 
@@ -279,13 +291,13 @@ go :- findall( (X) , path(g,X) , L ) , print(L),
 #+end_src
 
 #+RESULTS:
-: % /Users/elkawee/src/projects/reasoned/clause_and_effect/examples/src_out/chap1_dag.pl compiled 0.00 sec, 14 clauses
+: % /Users/elkawee/tmp/klaus/examples/src_out/chap1_dag.pl compiled 0.00 sec, 14 clauses
 : [g,h,f,c,d]
 : -----------------
 : [c,g,h,e,a,a,a,b,b,f]
 
 *** racket 
-#+begin_src scheme :tangle src_out/chap1_dag.pl :noweb yes 
+#+begin_src scheme :tangle src_out/chap1_dag.rkt :noweb yes 
   #lang racket
   <<make_pred_2>>
   (require (file "../../proll1/src_out/proll1.rkt"))
